--- a/css/output.css
+++ b/css/output.css
@@ -538,10 +538,6 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.static{
-  position: static;
-}
-
 .absolute{
   position: absolute;
 }
@@ -578,20 +574,8 @@ video {
   margin-top: 2rem;
 }
 
-.block{
-  display: block;
-}
-
 .flex{
   display: flex;
-}
-
-.grid{
-  display: grid;
-}
-
-.hidden{
-  display: none;
 }
 
 .h-1\/2{
@@ -614,20 +598,12 @@ video {
   width: 100vw;
 }
 
-.transform{
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .items-center{
   align-items: center;
 }
 
 .justify-center{
   justify-content: center;
-}
-
-.border{
-  border-width: 1px;
 }
 
 .bg-primaire{
@@ -661,10 +637,6 @@ video {
   font-size: 24px;
 }
 
-.font-bold{
-  font-weight: 700;
-}
-
 .font-extralight{
   font-weight: 200;
 }
@@ -681,11 +653,6 @@ video {
 .text-secondaire{
   --tw-text-opacity: 1;
   color: rgb(233 233 233 / var(--tw-text-opacity));
-}
-
-.shadow-primaire{
-  --tw-shadow-color: #263238;
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .transition{
@@ -721,6 +688,7 @@ button{
 
 button,
 input{
+  border-radius: 0.25rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-top: 0.25rem;
@@ -751,31 +719,9 @@ input{
   color: rgb(38 50 56 / var(--tw-text-opacity));
 }
 
-.hover\:-translate-y-2:hover{
-  --tw-translate-y: -0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:-translate-y-1:hover{
   --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:shadow:hover{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-lg:hover{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.focus\:shadow-primaire:focus{
-  --tw-shadow-color: #263238;
-  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .focus\:ring-2:focus{
@@ -784,23 +730,9 @@ input{
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-1:focus{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
 .focus\:ring-primaire:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(38 50 56 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-offset-primaire:focus{
-  --tw-ring-offset-color: #263238;
-}
-
-.focus\:ring-offset-slate-600:focus{
-  --tw-ring-offset-color: #475569;
 }
 
 @media (min-width: 1024px){
